--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,15 @@
 
     --font-commissioner: "Commissioner", sans-serif; 
 }
+
+@layer utilities {
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+        @apply appearance-none;
+    }
+    /* Firefox */
+    input[type="number"] {
+        @apply appearance-none;
+        -moz-appearance: textfield;
+    }
+}
